fixed overlaping elements

--- a/css/momentumstyle.css
+++ b/css/momentumstyle.css
@@ -15,7 +15,6 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
 }
 
 /*icon lists*/
@@ -92,8 +91,6 @@ body {
     font-weight: 500;
 }
 .mainfocus-container {
-    padding-top: 50px;
-    padding-bottom: 150px;
     font-size: 36px;
     color: #fff;
     display: flex;
